# multimodal-rag-cookbook

./: .gitignore  LEARN.md  build_database.py  dog_summary.py  pyproject.toml  requirements.txt  retriever.py  test.ipynb
db/: db.ipynb  db.py  image_features.parquet  labels.csv  text_chunks.parquet
